styles/layouts/_global-foot.scss
.global-footer {
  padding-top: 32px;
  padding-bottom: 40px;
  background-color: $background;

  &-title {
    @include text-style(13, $dark);
    font-weight: 700;

    .ic-chevron {
      @include text-style(12);
      display: inline-block;
      transform: rotate(-90deg);
    }
  }

  &-contact {
    @include text-style(24, $dark);
    font-weight: 700;
  }

  &-time {
    @include text-style(12, $primary);
    margin-bottom: 24px;
    font-weight: 400;
  }

  &-detail-item {
    @include flexbox(start);
    font-size: 10px;
    font-weight: 400;
    line-height: 16px;
    letter-spacing: -0.01em;
    color: $secondary;

    dt::after {
      display: inline-block;
      padding: 0 2px;
      content: ':';
    }
  }

  @include responsive(D) {
    &-title {
      @include text-style(14);
    }

    &-contact {
      margin-bottom: 2px;
    }

    &-detail-list {
      @include inline-flexbox(start);
    }

    &-detail-item:not(:last-child)::after {
      display: inline-block;
      padding: 0 8px;
      content: '|';

      &:hover {
        text-decoration: underline;
      }

      &:focus {
        opacity: 0.5;
      }
    }
  }
}

